[package]
name = "01_basic_ping_bot"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
serenity = { path = "../../", default-features = true }

[dependencies.tokio]
version = "0.2.0-alpha.5"

[dependencies.async-trait]
version = "0.1"

[dependencies.simplelog]
version = "0.7"

[dependencies.reqwest]
git = "https://github.com/seanmonstar/reqwest"
features = ["json"]