[package]
name = "05_command_framework"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await", "nightly"] }
async-trait = "0.1"

[dependencies.serenity]
features = ["framework", "standard_framework"]
path = "../../"

[dependencies.tokio]
version = "0.2.0-alpha.5"