[package]
name = "07_sample_bot_structure"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
env_logger = "0.6"
kankyo = "0.2"
log = "0.4"
async-trait = "0.1"
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }

[dependencies.serenity]
features = ["cache", "framework", "standard_framework"]
path = "../../"

[dependencies.tokio]
version = "0.2.0-alpha.6"